2022-02-16  Alex Christensen  <achristensen@webkit.org>

        Unreviewed, reverting r289150.

        Start using adattributiond on iOS again now that it is
        sandboxed

        Reverted changeset:

        "Don't use adattributiond on iOS"
        https://bugs.webkit.org/show_bug.cgi?id=236157
        https://commits.webkit.org/r289150

2022-02-16  Alex Christensen  <achristensen@webkit.org>

        Effectively revert r289018
        https://bugs.webkit.org/show_bug.cgi?id=236000

        It caused some problems, and another approach will be taken.

        * NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
        (WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):

2022-02-16  Kimmo Kinnunen  <kkinnunen@apple.com>

        ANGLE includes interfere with system header includes
        https://bugs.webkit.org/show_bug.cgi?id=236636

        Reviewed by Dean Jackson.

        Remove the attempt to override system header logic with WebKit
        ANGLE implementation. They are different implementations
        and one cannot replace the other.

        * GPUProcess/graphics/RemoteGraphicsContextGL.h:
        * Platform/spi/mac/AppKitSPI.h:
        * Platform/spi/mac/ApplicationServicesSPI.h:
        * WebProcess/Plugins/PDF/PDFLayerControllerSPI.h:

2022-02-16  Simon Fraser  <simon.fraser@apple.com>

        Allow downcast<> to work with ImageBufferBackends that support sharing
        https://bugs.webkit.org/show_bug.cgi?id=236671

        Reviewed by Said Abou-Hallawa.
        
        RemoteLayerBackingStore::encode() had some awkward code that used knowlege of the relationship
        between buffer types and mappability to static_cast<> to specific backend implementations.

        Replace this with a small abstract stub in the form of WebCore::ImageBufferBackendSharing, and
        a mixin class for shareable image buffers which inherits from a concrete subclass, ImageBufferBackendHandleSharing.