@@ -1,3 +1,15 @@
+2022-02-16  Per Arne Vollan  <pvollan@apple.com>
+
+        [macOS] Add access to mach service in the Networking process for all users
+        https://bugs.webkit.org/show_bug.cgi?id=236653
+        <rdar://88787266>
+
+        Reviewed by Chris Dumez.
+
+        Add access to CF preferences services if direct mode is not enabled.
+
+        * NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in:
+
 2022-02-16  Alex Christensen  <achristensen@webkit.org>
 
         Unreviewed, reverting r289150.
